# LiveSpec

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
example/: app.py
livespec/: __init__.py  generate_openapi.py
