[tool.poetry]
name = "livespec"
version = "0.1.0"
description = "Automatic live API documentation and request logging for Flask apps"
authors = ["Serkan Hancioglu <serkan@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.0"
flask-apispec = "^0.12.1"
APISpec = "^6.3.0"
swagger-ui-bundle = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
