[tool.poetry]
name = "livespec"
version = "0.1.0"
description = "Automatic live API documentation and request logging for Flask apps"
authors = ["Serkan Hancioglu <serkan@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.0"
flask-apispec = "^0.11.0"
APISpec = "^5.0.0"
swagger-ui-bundle = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
